# Mythic-Edge

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  LICENSE_POLICY.md  README.md  Start Mythic Edge Dev App.cmd  audit_player_log_drift.py  backfill_game_log_from_match_logs.py  create_auto_launcher_shortcut.ps1  import_current_decklist.py  live_print_filtered_v11_match_summary.py  main.py  pyproject.toml  pyrightconfig.json  record_hand_confirmation.py  refresh_grp_id_overrides.py  refresh_match_history_from_match_logs.py  score_grp_id_candidates.py  sync_card_catalog.py  sync_hand_confirmation_file.py  sync_tier_buckets.py  validate_arena_ids.py
.github/: pull_request_template.md
docs/: Mythic_Edge_Deep_Dive_Guide.md  Mythic_Edge_Learning_Guide.md  Tailer_py_Deep_Dive.md  agent_constitution.md  agent_rules.yml  analytics_suite_roadmap.md  codex_module_workflow.md  codex_skill_bundle.md  codex_skills.md  future_enhancement_ideas.md  internal_project_map.md  local_artifacts_manifest.json  private_local_v1_operator_guide.md  professional_growth_tools.md  project_roadmap.md  python_tooling_inventory.md  validation_matrix.json  validation_matrix.md  workbook_state_probe.example.json
examples/: live_print.py  live_print_filtered_v10_fixed.py  live_print_filtered_v8.py  live_print_filtered_v9.py
frontend/: index.html  package-lock.json  package.json  tsconfig.sites.json  vite.sites.config.ts
tests/: local_app_request_guard_helpers.py  test_agent_hardening_tools.py  test_analytics_app_gameplay_action_opponent_observation_views.py  test_analytics_app_match_game_history_views.py  test_analytics_app_opening_hand_mulligan_views.py  test_analytics_app_play_draw_postboard_split_views.py  test_analytics_browser_jsonl_upload.py  (+133 more)
(+1160 files in other folders)
